# eXtendedMirror

./: CMakeLists.txt  Doxyfile  ExtendedMirrorGuide.html  README.md  TODO  gen_templ.py
include/Common/: Common.hpp  ContainerUtils.hpp  DebugUtils.hpp  PtrCmpByName.hpp  Typedef.hpp
include/EXTMR/: ArrayType.hpp  Bind.hpp  BindFunction.hpp  BindGetNSetProperty.hpp  BindMethod.hpp  BoundsCheck.hpp  Class.hpp  CompoundClass.hpp  Empty.hpp  EnableStd.hpp  ExtendedMirror.hpp  Function.hpp  FunctionImpl.hpp  Macros.hpp  Member.hpp  Member.inl  MemberBuildUtils.hpp  MemberMakeUtils.hpp  MemberWrappers.hpp  Method.hpp  MethodImpl.hpp  MethodWrappers.hpp  Misc.hpp  Namespace.hpp  NumericalUtils.hpp  OtherMembers.hpp  Parameter.hpp  PointerType.hpp  PrimitiveType.hpp  Property.hpp  PropertyArrayField.hpp  PropertyField.hpp  PropertyGetterNSetter.hpp  RefCaster.hpp  RefCasterImpl.hpp  RefVariant.hpp  RefVariant.inl  Registration.hpp  RegistrationHelpers.hpp  RegistrationMacros.hpp  (+13 more)
include/EXTMR/Exceptions/: BadType.hpp  ConstnessBreak.hpp  MembersExceptions.hpp  NonAssignableException.hpp  NonCopyableException.hpp  NonDestructibleException.hpp  NonInstantiableException.hpp  NotFoundExceptions.hpp  OutOfRange.hpp  PropertyRangeException.hpp  PropertySetException.hpp  SetNotAllowed.hpp  VariantCostnessException.hpp  VariantTypeException.hpp
include/EXTMR/Utils/: ContainerUtils.hpp  DebugUtils.hpp  Typedef.hpp  Utils.hpp
include/XM/: .directory  ArrayType.hpp  Bind.hpp  BindFunction.hpp  BindGetNSetProperty.hpp  BindMethod.hpp  Class.hpp  CompoundClass.hpp  Constant.hpp  ConstantImpl.hpp  Empty.hpp  EnableStd.hpp  Enum.hpp  ExtendedMirror.hpp  Function.hpp  FunctionImpl.hpp  Item.hpp  Member.hpp  Member.inl  Method.hpp  MethodImpl.hpp  Name.hpp  Namespace.hpp  NamespaceMember.hpp  NumericalUtils.hpp  OtherMembers.hpp  Parameter.hpp  PointerType.hpp  PrimitiveType.hpp  Property.hpp  PropertyArrayField.hpp  PropertyField.hpp  PropertyGetterNSetter.hpp  RefCaster.hpp  RefCasterImpl.hpp  RefVariant.hpp  RefVariant.inl  ReflectStd.hpp  Register.hpp  Register.inl  (+18 more)
include/XM/Exceptions/: EnumKeyNotFoundException.hpp  MemberExceptions.hpp  MembersExceptions.hpp  NotFoundException.hpp  NotFoundExceptions.hpp  PropertyRangeException.hpp  PropertySetException.hpp  TemplArgException.hpp  VariantCostnessException.hpp  VariantTypeException.hpp
include/XM/Utils/: Bounds.hpp  ContainerUtils.hpp  Containers.hpp  Debug.hpp  DebugUtils.hpp  Names.hpp  String.hpp  Typedef.hpp  Utils.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: test.cpp
src/EXTMR/: ArrayType.cpp  Class.cpp  CompoundClass.cpp  Function.cpp  Member.cpp  Method.cpp  Misc.cpp  OtherMembers.cpp  PointerType.cpp  PrimitiveType.cpp  Property.cpp  RefCaster.cpp  RefVariant.cpp  Template.cpp  Type.cpp  TypeRegister.cpp  Variant.cpp
src/EXTMR/Exceptions/: BadType.cpp  ConstnessBreak.cpp  MembersExceptions.cpp  NonAssignableException.cpp  NonCopyableException.cpp  NonDestructibleException.cpp  NonInstantiableException.cpp  NotFoundExceptions.cpp  OutOfRange.cpp  PropertyRangeException.cpp  PropertySetException.cpp  SetNotAllowed.cpp  VariantCostnessException.cpp  VariantTypeException.cpp
src/XM/: ArrayType.cpp  CMakeLists.txt  Class.cpp  CompoundClass.cpp  Constant.cpp  Enum.cpp  Function.cpp  Item.cpp  Member.cpp  Method.cpp  Name.cpp  Namespace.cpp  OtherMembers.cpp  PointerType.cpp  PrimitiveType.cpp  Property.cpp  RefCaster.cpp  RefVariant.cpp  Register.cpp  SpecialMembers.cpp  TemplArg.cpp  Template.cpp  Type.cpp  TypeRegister.cpp  Variable.cpp  Variant.cpp
src/XM/Exceptions/: CMakeLists.txt  EnumKeyNotFoundException.cpp  MemberExceptions.cpp  MembersExceptions.cpp  NotFoundException.cpp  NotFoundExceptions.cpp  PropertyRangeException.cpp  PropertySetException.cpp  TemplArgException.cpp  VariantCostnessException.cpp  VariantTypeException.cpp
src/XM/Utils/: CMakeLists.txt  Names.cpp  String.cpp
templ/include/XM/: BindFunction.hpp.py  BindGetNSetProperty.hpp.py  BindMethod.hpp.py  FunctionImpl.hpp.py  MakeSign.hpp.py  MethodImpl.hpp.py  ParamLists.hpp.py  PropertyGetterNSetter.hpp.py  TemplateRegistrationMacros.hpp.py
templ/src/XM/: Function_Gen.cpp.py  Method_Gen.cpp.py  Variant_Gen.cpp.py
templ_gen/include/EXTMR/: Bind.hpp.py  BindGetNSetProperty.hpp.py  BindMethod.hpp.py  MethodImpl.hpp.py  PropertyGetterNSetter.hpp.py  RegistrationMacros.hpp.py  TemplateRegistrationMacros.hpp.py
templ_gen/include/XM/: BindFunction.hpp.py  BindGetNSetProperty.hpp.py  BindMethod.hpp.py  FunctionImpl.hpp.py  MethodImpl.hpp.py  PropertyGetterNSetter.hpp.py  TemplateRegistrationMacros.hpp.py
test/: CMakeLists.txt
test/gtest-1.7.0/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/include/: Button.hpp  Control.hpp  FactoryFunctions.hpp  MyButton.hpp  MyTemplate.hpp  MyTemplate2.hpp  Rectangle.hpp  Shape.hpp
test/src/: Button.cpp  CMakeLists.txt  Control.cpp  FactoryFunctions.cpp  MyButton.cpp  MyTemplate.cpp  MyTemplate2.cpp  Rectangle.cpp  Shape.cpp  Tests.cpp
test/test1/: main.cpp
test/test1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
test/test1/nbproject/private/: private.xml
