add_library("xMirror" SHARED
	"ArrayType.cpp"
	"Class.cpp"
	"CompoundClass.cpp"
    "Constant.cpp"
    "Enum.cpp"
	"Function.cpp"
	"Function_Gen.cpp"
	"Item.cpp"
	"Member.cpp"
	"Method.cpp"
	"Method_Gen.cpp"
	"Namespace.cpp"
	"PointerType.cpp"
	"PrimitiveType.cpp"
	"Property.cpp"
	"Register.cpp"
	"SpecialMembers.cpp"
	"Template.cpp"
	"Type.cpp"
	"Variant.cpp"
	"Variant_Gen.cpp"
	"Exceptions/EnumKeyNotFoundException.cpp"
	"Exceptions/NotFoundException.cpp"
	"Exceptions/MemberExceptions.cpp"
	"Exceptions/PropertyRangeException.cpp"
	"Exceptions/PropertySetException.cpp"
	"Exceptions/VariantCostnessException.cpp"
	"Exceptions/VariantTypeException.cpp"
	"Utils/Names.cpp")

#Installing
install(TARGETS xMirror LIBRARY DESTINATION lib)
